# stringsim

./: .gitignore  .gitmodules  CMakeLists.txt
c++/: .gitignore  CMakeLists.txt  Makefile  WatermanEggert.h  property_tests.cpp  test.cpp  test_utils.cpp  test_utils.h  unit_tests.cpp
c++/include/WatermanEggert/: WatermanEggert.h  matrix.h
c++/test/: property_tests.cpp  test_utils.cpp  test_utils.h  unit_tests.cpp
include/stringsim/: matrix.h  stringsim.h
test/: property_tests.cpp  test_utils.cpp  test_utils.h  unit_tests.cpp
